feat(AUTHORS): scripted AUTHORS
This introduces a postcommit hook that will automatically update the
AUTHORS file.

This will
search the AUTHORS file for the email of the committer
add a line with name <email> for that committer if they are not represented already

This also introduces a seed-authors script that will

output authors by order of first contribution to the AUTHORS file
filter out repeat entries (unique by email) and commits accidentally added before being associated with a git account

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,14 +1,12 @@
-#Authors
+# Authors orderd by date of first contribution 
 
-Brad Decker <brad.decker@merlinlabs.com>
-David Lee <david.lee@merlinlabs.com>
-Natalia Bernard <natalia.bernard@merlinlabs.com>
-Marta Johnson <marta.johnson@merlinlabs.com>
-Nathan Schwartz <nathan.schwartz@merlinlabs.com>
-Krista Goralczyk <krista.goralczyk@gmail.com>
-Daniel St.Clair <daniel.stclair@merlinlabs.com>
-Jean Page <jean.page@merlinlabs.com>
-Bennett Staley <bennett.staley@merlinlabs.com>
-Ari Frankel <ari.frankel@merlinlabs.com>
-Pete Givens <pgivens@gmail.com>
-Ashley Woodall <ashley.woodall@merlinlabs.com>
+
+ Brad Decker <bhdecker84@gmail.com>
+ iamdavid0091 <iamdavid0091@gmail.com>
+ Cecilia Cisneros <cmvrie@utexas.edu>
+ martahj <marta.hourigan.johnson@gmail.com>
+ Ari Frankel <ari.l.frankel@gmail.com>
+ kristajg <krista.goralczyk@gmail.com>
+ Taylor King <dekkofilms@gmail.com>
+ ashwoodall <ash.woodall@gmail.com>
+ Pete Givens <pgivens@gmail.com>
