docs(Contributing Guide): Adjust grammar

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@
  ashwoodall <ash.woodall@gmail.com>
  Pete Givens <pgivens@gmail.com>
  Julianne Johnson <tweetypie417@yahoo.com>
+ calebjanderson <caleb.anderson130@gmail.com>
