fixed typo in Contributing

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@
  Taylor King <dekkofilms@gmail.com>
  ashwoodall <ash.woodall@gmail.com>
  Pete Givens <pgivens@gmail.com>
+ Julianne Johnson <tweetypie417@yahoo.com>
