fix button styles

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@
  Pete Givens <pgivens@gmail.com>
  Julianne Johnson <tweetypie417@yahoo.com>
  calebjanderson <caleb.anderson130@gmail.com>
+ ceciliamvrie <ceciliamvrie@gmail.com>
