feat(BottomSheet): Add BottomSheet Bottomsheets can be either modal or persistent. To specify a modal sheet, pass a "modal" prop.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# Authors orderd by date of first contribution 
+# Authors orderd by date of first contribution
 
 
  Brad Decker <bhdecker84@gmail.com>
@@ -13,3 +13,4 @@
  Julianne Johnson <tweetypie417@yahoo.com>
  calebjanderson <caleb.anderson130@gmail.com>
  ceciliamvrie <ceciliamvrie@gmail.com>
+ haileybee1231 <haileybee1231@gmail.com>
