feat(Switch): Add Switch Accepts light, dark, disable, and raised props

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@
  ceciliamvrie <ceciliamvrie@gmail.com>
  haileybee1231 <haileybee1231@gmail.com>
  bennett staley <me@bennettstaley.com>
+ Joseph Strandmo <josephstrandmo@gmail.com>
