Change Sidebar to Follow Spec

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@
  calebjanderson <caleb.anderson130@gmail.com>
  ceciliamvrie <ceciliamvrie@gmail.com>
  haileybee1231 <haileybee1231@gmail.com>
+ bennett staley <me@bennettstaley.com>
