feat(TextField): Add Reset Functionality
Add ability to reset a text field to it's
default value from the parent component.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@
  haileybee1231 <haileybee1231@gmail.com>
  bennett staley <me@bennettstaley.com>
  Joseph Strandmo <josephstrandmo@gmail.com>
+ danielstclair <danielallanstclair@gmail.com>
