Add ListSubheader to List component

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@
  bennett staley <me@bennettstaley.com>
  Joseph Strandmo <josephstrandmo@gmail.com>
  danielstclair <danielallanstclair@gmail.com>
+ Brandon Clark <yhbrandon@gmail.com>
