allow Dialog to close on outside click
fixed spacing

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@
  Joseph Strandmo <josephstrandmo@gmail.com>
  danielstclair <danielallanstclair@gmail.com>
  Brandon Clark <yhbrandon@gmail.com>
+ brian pursell <brian@bittermelon.io>
