Unfocus first menulist item on page load

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@
  danielstclair <danielallanstclair@gmail.com>
  Brandon Clark <yhbrandon@gmail.com>
  brian pursell <brian@bittermelon.io>
+ joshuapawlik <joshawesome12@yahoo.com>
