--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@
  danielstclair <danielallanstclair@gmail.com>
  Brandon Clark <yhbrandon@gmail.com>
  brian pursell <brian@bittermelon.io>
+ Jonathan Tredway <jptredway@gmail.com>
